--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.6",
+    "tailwindcss": "^3.4.3",
     "ton": "13.3.0",
     "ton-core": "^0.46.0",
     "ton-crypto": "^3.2.0",
